# zen-tab

./: .gitignore  .webextensiontoolboxrc  PRIVACY_POLICY.md  README.md  lev.ts  package-lock.json  package.json  tsconfig.json  webextension-toolbox.config.js
.github/workflows/: release.yml
app/: manifest.json  popup.html  settings.html
app/scripts/: background.ts  content.ts  content.tsx  favicon-cache.ts  lev.ts  popup.ts  popup.tsx  reader.ts  search-app.tsx  search.ts  settings.tsx  types.ts  utils.ts
app/scripts/icons/: BookmarkIcon.tsx  CommandIcon.tsx  HistoryIcon.tsx  SearchIcon.tsx  WindowIcon.tsx  index.ts
app/styles/: content.css  fallback.css  popup.css  root.css  settings.css
ld-wasm-lib/: Cargo.toml  LICENSE
ld-wasm-lib/src/: lev.rs  lib.rs
scripts/: tag_to_manifest.js  unpack_zip.sh
types/: ld-wasm-lib.d.ts
