[package]
name = "ld-wasm-lib"
version = "0.1.0"
edition = "2024"
description = "A WebAssembly library for LD operations"
repository = "https://github.com/echosonusharma/zen-tab/ld-wasm-lib"
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
