[package]
name = "ld-wasm-lib"
version = "0.1.0"
edition = "2024"
description = "A WebAssembly library for LD operations"
repository = "https://github.com/echosonusharma/zen-tab/ld-wasm-lib"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
url = "2.5.4"

[profile.release]
opt-level = "z"       # or "3" for max speed
lto = true            # link-time optimization
codegen-units = 1     # better optimization across units
panic = "abort"       # smaller binary, faster
strip = true          # remove symbols (Rust 1.60+)
